--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project1 - Meal Planning API</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://resources/demos/style.css">
+    <link rel="stylesheet" href="./style.css">  
   </head>
  
   
@@ -24,7 +26,8 @@
     <div class="container">
       <div class="notification is-primary">
         <strong class="day">Sunday</strong>
-        <form class="btn">
+
+        <form class="btn meal">
 
           <input type="text" class="searchMeal" name='sundaymeal' placeholder="Enter Your Meal Here">
           <button type="submit" class="searchBtn">Enter</button>
@@ -35,12 +38,12 @@
               <strong class="mealName" >i.e Spagetti and Meatballs (JS Web API data goes here)</strong>
               <p class="mealIngredients">i.e Tomato Sauce, crush red peppers, Tomato Paste (JS Web API data goes here)</p>
           </div>
-          
-          <div class="btn">
+
+          <form class="btn drink">
         <input type="textDrink" class="searchDrink" placeholder="Enter Your Drink Here">
         <button type="type" class="searchBtn">Enter</button>
-          </div>
-        <div class="rowDrink">
+          </form>
+        <div class="rowDrink" id="sundayDrink">
             <strong class="drinkName">i.e Long Island Ice Tea (JS Web API data goes here)</strong>
             <p class="drinkIngredients">Vodka, Tequila, Triple sec, rum, Gin (JS Web API data goes here)</p>
         </div>
